<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Contacts Widget</string>
    <string name="activity_title">Contacts Widget - How To</string>
    <string name="help_file_name">help.html</string>
    <string name="help_file_encoding">utf&#8211;8</string>
    <string name="widget_name">Contacts Widget</string>
    <string name="widget_name_stack">Contacts Widget(Stack View)</string>
    <string name="widget_name_large">Contacts Widget(Large)</string>
    <string name="widget_name_super">Contacts Widget(Super)</string>
    <string name="widget_name_direct_dial">Contacts Widget(Direct Dial)</string>
    <string name="empty_view_text">No Contacts Loaded</string>
    <string name="contactImageDescription">Contact Image</string>
    <string name="checkShowNameText">Show Contact Name</string>
    <string name="showPeopleAppShortcut">People App Shortcut</string>
    <string name="loopContactsText">Loop Through Contacts</string>

    <!-- Configurations -->
    <string name="contactGroup">Group</string>
    <string name="contactGroupPrompt">Select a contact group to display contacts</string>
    <string name="contactSorting">Sorting</string>
    <string name="buttonContactFrequency">By Times Contacted</string>
    <string name="buttonContactRecent">By Last Time Contacted</string>
    <string name="buttonContactDisplayName">By Display Name</string>
    <string name="invalid_provider_info">Invalid widget provider info: </string>
    <string name="open_the_people_app">Open the People app</string>
    <string name="directDialText">Direct Dial</string>
    <string name="loading">Loading&#8230;</string>
    <string name="showHighResText">Show High Resolution Pictures</string>
    <string name="setMaxNumberTitle">Maximum Number of Contacts</string>
    <string-array name="sortingOptions">
        <item>By Times Contacted</item>
        <item>By Last Time Contacted</item>
        <item>By Display Name</item>
    </string-array>
    <string name="save">Save</string>

    <!-- Localization -->
    <string name="starredContacts">Starred in Android</string>
    <string name="myContacts">My Contacts</string>

</resources>