<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true" >

    <TextView
        android:layout_gravity="left"
        android:text="@string/contactGroup" />

    <Spinner
        android:id="@+id/groupList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/contactGroupPrompt" />

    <Space
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />

    <!-- Begining of Sorting -->
    <TextView
        android:layout_columnSpan="2"
        android:layout_gravity="left"
        android:text="@string/contactSorting"
        android:textSize="16dip" />
    <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_columnSpan="2"
      android:id="@+id/contactSorting">
      <RadioButton android:id="@+id/radioContactFrequency"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/buttonContactFrequency"
          android:checked="true" />
      <RadioButton android:id="@+id/radioContactRecent"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/buttonContactRecent" />
      <RadioButton android:id="@+id/radioContactDisplayName"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/buttonContactDisplayName" />
    </RadioGroup>
    <!-- End of Sorting -->

    <Space
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_columnSpan="2"
        android:text="@string/buttonOk" />

</GridLayout>