<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/widget_margin"
    android:layout_marginBottom="@dimen/widget_margin_bottom"
    android:layout_marginTop="@dimen/widget_margin_top"
    android:padding="10dp" >

    <TextView
        android:id="@+id/groupListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingTop="10dip"
        android:text="@string/contactGroup"
        android:textColor="@color/holo_blue_light"
        android:textSize="16dip" />

    <TextView
        android:id="@+id/line1"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/groupListText"
        android:background="@color/holo_blue_light"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />

    <Spinner
        android:id="@+id/groupList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:prompt="@string/contactGroupPrompt" />
    
    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/groupList"
        android:background="@color/holo_blue_light"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />
    
	<CheckBox
            android:id="@+id/checkShowName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:text="@string/checkShowNameText"
            android:checked="true" />
	
	<CheckBox
            android:id="@+id/loopContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkShowName"
            android:text="@string/loopContactsText"
            android:checked="true" 
            android:enabled="false"/>
	
    <!-- Begining of Sorting -->

    <TextView
        android:id="@+id/sortText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loopContacts"
        android:layout_gravity="left"
        android:text="@string/contactSorting"
        android:textColor="@color/holo_blue_light"
        android:textSize="16dip" />

    <TextView
        android:id="@+id/line3"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sortText"
        android:background="@color/holo_blue_light"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />

    <RadioGroup
        android:id="@+id/contactSorting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/line3"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioContactFrequency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/buttonContactFrequency" />

        <RadioButton
            android:id="@+id/radioContactRecent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonContactRecent" />

        <RadioButton
            android:id="@+id/radioContactDisplayName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonContactDisplayName" />
    </RadioGroup>
    <!-- End of Sorting -->

    <LinearLayout
        android:id="@+id/ButtonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/buttonCancel" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonOk" />
    </LinearLayout>

</RelativeLayout>
